Feature/fe be 37 team generation logic refactor (#116)
* FE-36: Error handling and questionnaire consent

* FE-BE-37: Team generation logic refactor, Default questionnaire view changes

* FE-BE-37: Merge with answers logic and add fixes

---------

Co-authored-by: HGRUPP\alfred.kraft <alfred.kraft@helmes.com>